--- a/linear_structure/list/leetcode/189_RotateArray.ipynb
+++ b/linear_structure/list/leetcode/189_RotateArray.ipynb
@@ -63,8 +63,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8ad10ac8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 1), (4, 2), (5, 3), (6, 4), (0, 5), (1, 6), (2, 7)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,4,5,6,7]\n",
+    "k = 3\n",
+    "l = len(nums)\n",
+    "\n",
+    "ls = [  ((i+k)%l, j) for i,j in enumerate(nums)]\n",
+    "ls.sort()\n",
+    "nums[:] = [i[1] for i in ls]\n",
+    "nums\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c7ed8f5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 7, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,4,5,6,7]\n",
+    "k = 3\n",
+    "l = len(nums)\n",
+    "\n",
+    "label = -1\n",
+    "count =0\n",
+    "\n",
+    "for i,j in enumerate(nums):\n",
+    "    if (i+k)%l == 0:\n",
+    "        label = count\n",
+    "        break\n",
+    "    count+=1\n",
+    "\n",
+    "nums[:] = nums[label:] + nums[:label]\n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8f8f217",
    "metadata": {},
    "outputs": [],
    "source": []
