--- a/linear_structure/stack/20括号问题.ipynb
+++ b/linear_structure/stack/20括号问题.ipynb
@@ -1,15 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "402bf9db-094c-4b92-8568-55ae60a26ff4",
    "metadata": {},
-   "outputs": [],
    "source": [
     "编写程序检查该字符串的括号是否成对出现\n",
     "\n",
-    "根据提示，判断字符串是否有效，即字符串中括号是否成对出现。若是，则输出 True ，否则输出 False 。其中字符串的字符只包含三种括号，花括号{}、中括号[]、圆括号()，即它仅由 (、)、[、]、{、}六个字符组成。\n",
+    "根据提示，判断字符串是否有效，即字符串中括号是否成对出现。若是，则输出 True ，否则输出 False 。\n",
+    "其中字符串的字符只包含三种括号，花括号{}、中括号[]、圆括号()，即它仅由 (、)、[、]、{、}六个字符组成。\n",
     "\n",
     "提示\n",
     "\n",
@@ -33,10 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5a8c0fb7-f266-4b40-8373-6eaffbecd249",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "\n",
@@ -89,10 +96,47 @@
     "    return flag\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    strList = input().split()\n",
+    "    # strList = input().split()\n",
+    "    strList = '(x+y)=[3]'\n",
     "    result = syntaxChecker(strList)\n",
     "    print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "51c325eb-0deb-45e2-9a0b-8ee7b3f72eb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 153, 370, 371, 407, 1634, 8208, 9474, 54748, 92727, 93084]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def self_pow_num(up_num):\n",
+    "    ans = []\n",
+    "    for num in range(1,up_num+1):\n",
+    "        pos_num = len(str(num))\n",
+    "        part_num_list = [num//10**(pos)%10 for pos in range(pos_num)]\n",
+    "        sum_num = sum([x**pos_num for x in part_num_list])\n",
+    "        if sum_num == num:\n",
+    "            yield num\n",
+    "        else:\n",
+    "            continue\n",
+    "print(list(self_pow_num(100000)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2898fbc1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -112,6 +156,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ca091608d44dc08bfc212ab9efe45736a1dc0fc5d2c0d0a9cccce5866f8fffa4"
+   }
   }
  },
  "nbformat": 4,
