--- a/linear_structure/stack/stack.ipynb
+++ b/linear_structure/stack/stack.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "2266879a-986e-458f-bf62-af8fc56dc40d",
    "metadata": {},
-   "outputs": [],
    "source": [
     "栈抽象数据类型；\n",
     "\n",
@@ -44,10 +42,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4159f2ba-7dba-43db-818d-362b6cc09182",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "['1', '2', '3', '4', '5', '6', '7']\n",
+      "7 6 5 4 3 2 1 "
+     ]
+    }
+   ],
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "'''请在Begin-End之间补充代码, 完成Stack类'''  \n",
@@ -77,24 +85,36 @@
     "    def size(self):  \n",
     "        # ********** Begin ********** #  \n",
     "        return len(self.__list)  \n",
-    "        # ********** End ********** #      \n",
+    "        # ********** End ********** #     \n",
+    "    def __repr__(self):\n",
+    "        return str(self.__list)\n",
+    "    \n",
     "if __name__ == \"__main__\":  \n",
-    "    stack = Stack()   \n",
-    "    nums = input().split()  \n",
+    "    stack = Stack()   # ==> Stack(self,'123') ==> __init__(self,'123')\n",
+    "    nums = '1234567'\n",
     "    # 将nums中的元素依次入栈  \n",
     "    for num in nums:  \n",
     "        stack.push(num)  \n",
     "    # 打印栈的长度  \n",
-    "    print(stack.size())  \n",
+    "    print(stack.size())\n",
+    "    print(stack)  \n",
     "    # 将栈中元素依次弹出  \n",
     "    while not stack.is_empty():  \n",
     "        print(stack.pop(), end = ' ')  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b03708a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -109,6 +129,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ca091608d44dc08bfc212ab9efe45736a1dc0fc5d2c0d0a9cccce5866f8fffa4"
+   }
   }
  },
  "nbformat": 4,
