--- a/linear_structure/list/yield.ipynb
+++ b/linear_structure/list/yield.ipynb
@@ -10,18 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d3ec944f",
+   "execution_count": null,
+   "id": "a4822a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generate_square(n):\n",
     "    i = 0\n",
@@ -30,7 +22,9 @@
     "        i += 1\n",
     "\n",
     "result = generate_square(10)\n",
-    "print(list(result))"
+    "# next(result)  <=> result.__next__() implement 2 method ( protocal: __iter__() __next__() )\n",
+    "print(list(result))\n",
+    "next(result)"
    ]
   },
   {
@@ -93,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "516e6662",
    "metadata": {},
    "outputs": [
@@ -113,7 +107,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32md:\\jupyter_run\\python-basic\\advanced\\linear_structure\\list\\yield.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/jupyter_run/python-basic/advanced/linear_structure/list/yield.ipynb#ch0000008?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mnext\u001b[39m(it))\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/jupyter_run/python-basic/advanced/linear_structure/list/yield.ipynb#ch0000008?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mnext\u001b[39m(it))\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/jupyter_run/python-basic/advanced/linear_structure/list/yield.ipynb#ch0000008?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mnext\u001b[39;49m(it))\n",
+      "\u001b[1;32md:\\jupyter_run\\python-advanced\\linear_structure\\list\\yield.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/jupyter_run/python-advanced/linear_structure/list/yield.ipynb#ch0000004?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mnext\u001b[39m(it))\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/jupyter_run/python-advanced/linear_structure/list/yield.ipynb#ch0000004?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mnext\u001b[39m(it))\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/jupyter_run/python-advanced/linear_structure/list/yield.ipynb#ch0000004?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mnext\u001b[39;49m(it))\n",
       "\u001b[1;31mStopIteration\u001b[0m: "
      ]
     }
@@ -244,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "9b7117db",
    "metadata": {},
    "outputs": [
@@ -253,7 +247,6 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "None\n",
       "None\n"
      ]
     }
@@ -264,7 +257,6 @@
     "        n = yield n\n",
     "\n",
     "g = echo(1)\n",
-    "print(next(g))\n",
     "print(next(g))\n",
     "print(next(g))"
    ]
@@ -283,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "894bd15b",
    "metadata": {},
    "outputs": [
@@ -295,8 +287,6 @@
       "4\n",
       "********************\n",
       "res: None\n",
-      "4\n",
-      "res: 7\n",
       "4\n"
      ]
     }
@@ -340,26 +330,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
+   "id": "20c46fd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8208 == 8**4 + 2**4 + 8**4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "b74889b4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zhangsan\n",
-      "85\n",
-      "1001\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 5]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict1 = {'name': 'zhangsan', 'grade': '85', 'num': '1001'}\n",
-    "# 遍历输出dict的value\n",
-    "for k, v in dict1.items():\n",
-    "    print(v)"
+    "def fib(x):\n",
+    "    a ,b= 1,1\n",
+    "    for i in range(x):\n",
+    "        yield a\n",
+    "        a ,b = b,a+b\n",
+    "        \n",
+    "\n",
+    "list(fib(5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d77cb148",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 5,\n",
+       " 6,\n",
+       " 7,\n",
+       " 8,\n",
+       " 9,\n",
+       " 153,\n",
+       " 370,\n",
+       " 371,\n",
+       " 407,\n",
+       " 1634,\n",
+       " 8208,\n",
+       " 9474,\n",
+       " 54748,\n",
+       " 92727,\n",
+       " 93084,\n",
+       " 548834]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def shuixianhua(n):        \n",
+    "    for i in range(1,n):\n",
+    "        exp = 1\n",
+    "        ls = []\n",
+    "        while i // exp > 0 :\n",
+    "            ls.append(i // exp % 10)\n",
+    "            exp *= 10\n",
+    "        p = len(ls)\n",
+    "        if sum([item**p for item in ls])==i:\n",
+    "            yield i\n",
+    " \n",
+    "list(shuixianhua(1000000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "42b862b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fib(x):\n",
+    "    a,b = 1,1\n",
+    "    for i in range(x):\n",
+    "        yield a # return a, 同时保存当前状态，中断！！！\n",
+    "        a , b = b, a+b\n",
+    "\n",
+    "f = fib(10)\n",
+    "list(f)\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37c51e6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
