--- a/linear_structure/quene/JosephusSolver.ipynb
+++ b/linear_structure/quene/JosephusSolver.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "a66aeb5a-2443-4e4f-8dab-dcf80d951bd1",
    "metadata": {},
-   "outputs": [],
    "source": [
     "约瑟夫环问题\n",
     "约瑟夫问题是个著名的问题：n 个人围成一圈 (3<=n<=100)（从零开始编号），从第一个人开始报数，第 m 个将被杀掉 (1<=m<=n)，最后剩下一个，其余人都将被杀掉。\n",
@@ -24,10 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9e939d78-b5d1-4447-b852-4c2dbbc2c403",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 3, 5, 1, 2, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "class Queue():  \n",
@@ -73,17 +79,28 @@
     "    x = queue.dequeue() # 弹出x  \n",
     "    result.append(x)  \n",
     "    # ********** End ********** #  \n",
-    "    return result  \n",
+    "    return result\n",
+    "\n",
     "if __name__ == \"__main__\":      \n",
-    "    n = int(input())  \n",
-    "    m = int(input())  \n",
+    "    # n = int(input())  \n",
+    "    # m = int(input())\n",
+    "    n = 6\n",
+    "    m = 5  \n",
     "    print(JosephusSolver(n,m))  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "774a2ab9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -97,7 +114,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a4dded33d7e5587329f3b5bd298582320440e731ec97d683ac8324bdf803f54d"
+   }
   }
  },
  "nbformat": 4,
