--- a/linear_structure/stack/85.ipynb
+++ b/linear_structure/stack/85.ipynb
@@ -90,15 +90,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 李家宝代码\n",
+    "matrix = [[\"1\",\"0\",\"1\",\"0\",\"0\"],\n",
+    "         [\"1\",\"0\",\"1\",\"1\",\"1\"],\n",
+    "         [\"1\",\"1\",\"1\",\"1\",\"1\"],\n",
+    "         [\"1\",\"0\",\"0\",\"1\",\"0\"]]\n",
+    "\n",
+    "def maxRetangle(matrix):\n",
+    "    if not matrix:\n",
+    "        return 0\n",
+    "    m, n = len(matrix), len(matrix[0])\n",
+    "    tmp = [0]*(n+1)\n",
+    "    s = 0\n",
+    "    for i in range(m):\n",
+    "        for j in range(n):\n",
+    "            tmp[j] = tmp[j]+1 if matrix[i][j]==\"1\" else 0\n",
+    "\n",
+    "        stk = [-1]\n",
+    "        for k, v in enumerate(tmp):\n",
+    "            while stk and tmp[stk[-1]] > v:\n",
+    "                index = stk.pop()\n",
+    "                s = max(s, tmp[index]*(k - stk[-1] - 1))\n",
+    "            stk.append(k)\n",
+    "    return s\n",
+    "\n",
+    "print(maxRetangle(matrix))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -112,12 +146,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+    "hash": "a4dded33d7e5587329f3b5bd298582320440e731ec97d683ac8324bdf803f54d"
    }
   }
  },
