--- a/linear_structure/stack/224.ipynb
+++ b/linear_structure/stack/224.ipynb
@@ -51,7 +51,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 郭源code\n",
+    "def jisuan(s):\n",
+    "    r = 0\n",
+    "    number = 0\n",
+    "    sign = 1\n",
+    "    a = []\n",
+    "    b = []\n",
+    "    for i in range(len(s)):\n",
+    "        if s[i].isdigit():\n",
+    "            number = int(s[i])+number*10\n",
+    "        elif s[i] == '+':\n",
+    "            r = r+number*sign\n",
+    "            number = 0\n",
+    "            sign = 1\n",
+    "        elif s[i] == '-':\n",
+    "            r = r+number*sign\n",
+    "            number = 0\n",
+    "            sign = -1\n",
+    "        elif s[i] == '(':\n",
+    "            a.append(r)\n",
+    "            b.append(sign)\n",
+    "            r = 0\n",
+    "            sign = 1\n",
+    "        elif s[i] == ')':\n",
+    "            r = r+number*sign\n",
+    "            p = a.pop()\n",
+    "            q = b.pop()\n",
+    "            r = p+q*r\n",
+    "            number = 0\n",
+    "            sign = 1\n",
+    "    return r+number*sign\n"
+   ]
   }
  ],
  "metadata": {
