--- a/linear_structure/stack/224.ipynb
+++ b/linear_structure/stack/224.ipynb
@@ -82,7 +82,12 @@
     "            r = p+q*r\n",
     "            number = 0\n",
     "            sign = 1\n",
-    "    return r+number*sign\n"
+    "    return r+number*sign\n",
+    "\n",
+    "print(jisuan(\"1 + 1\"))\n",
+    "print(jisuan(\" 2-1 + 2 \"))\n",
+    "print(jisuan(\" 2  - (1+2-(1+2))\"))\n",
+    "print(jisuan(\"(1+(4+5+2)-3)+(6+8)\"))\n"
    ]
   }
  ],
