--- a/linear_structure/Deque/3. 无重复字符的最长子串.ipynb
+++ b/linear_structure/Deque/3. 无重复字符的最长子串.ipynb
@@ -123,25 +123,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "动窗口题目:\n",
+    "滑动窗口题目:\n",
     "\n",
-    "3. 无重复字符的最长子串\n",
+    "[3. 无重复字符的最长子串](https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/)\n",
     "\n",
-    "30. 串联所有单词的子串\n",
+    "[30. 串联所有单词的子串](https://leetcode-cn.com/problems/substring-with-concatenation-of-all-words/)\n",
     "\n",
-    "76. 最小覆盖子串\n",
+    "[76. 最小覆盖子串](https://leetcode-cn.com/problems/minimum-window-substring/)\n",
     "\n",
-    "159. 至多包含两个不同字符的最长子串\n",
+    "[159. 至多包含两个不同字符的最长子串](https://leetcode-cn.com/problems/longest-substring-with-at-most-two-distinct-characters/)\n",
     "\n",
-    "209. 长度最小的子数组\n",
+    "[209. 长度最小的子数组](https://leetcode-cn.com/problems/minimum-size-subarray-sum/)\n",
     "\n",
-    "239. 滑动窗口最大值\n",
+    "[239. 滑动窗口最大值](https://leetcode-cn.com/problems/sliding-window-maximum/)\n",
     "\n",
-    "567. 字符串的排列\n",
+    "[567. 字符串的排列](https://leetcode-cn.com/problems/permutation-in-string/)\n",
     "\n",
-    "632. 最小区间\n",
+    "[632. 最小区间](https://leetcode-cn.com/problems/smallest-range/)\n",
     "\n",
-    "727. 最小窗口子序列\n"
+    "[727. 最小窗口子序列](https://leetcode-cn.com/problems/minimum-window-subsequence/)\n"
    ]
   }
  ],
