--- a/linear_structure/stack/155.ipynb
+++ b/linear_structure/stack/155.ipynb
@@ -56,11 +56,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1，时间复杂度低，空间复杂度较高：\n",
+    "在存储数据进入时，采取二维list[ [val,minval] , [val,minval] ]的形式存储，为了方便getmin函数的使用，只需返回self.items[-1][1]\n",
+    "或者\n",
+    "仍采取一维list，但是每次push时需多存储一个数据min(self.items[-2],val)（当前最小val），但是pop每次需要推出两个，top函数需返回self.items[-2]，getmin函数也就只需返回self.items[-1]\n",
+    "再或者\n",
+    "定义两个list，minList与normalList\n",
+    "2，时间复杂度高，空间复杂度低：\n",
+    "采取list储存，使用min函数遍历list从而获取minval"
+   ]
   }
  ],
  "metadata": {
