--- a/linear_structure/quene/17.14. 最小K个数.ipynb
+++ b/linear_structure/quene/17.14. 最小K个数.ipynb
@@ -17,63 +17,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 10, 5]\n",
-      "[1, 5]\n",
-      "[10, 5]\n",
-      "1\n",
-      "5\n",
-      "10\n"
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#     5\n",
+    "#  3     2\n",
+    "#1   0  1  0\n",
+    "# 5 3 2 1 0 1 0\n",
+    "# i leftchild = 2i+1 rightchild 2i+2\n",
+    "# i parent (i-1)//2 \n",
+    "# 逻辑结构是tree，物理结构是list\n",
+    "\n",
+    "# 何昌源code：\n",
+    "def heapify(arr,n,i):\n",
+    "    largest=i\n",
+    "    l=2*i+1\n",
+    "    r=2*i+2\n",
+    "    if l<n and arr[i]>arr[l]:\n",
+    "        largest=l\n",
+    "    if r<n and arr[largest]>arr[r]:\n",
+    "        largest=r\n",
+    "    if largest!=i:\n",
+    "        arr[i],arr[largest]=arr[largest],arr[i]        \n",
+    "        heapify(arr,n,largest)\n",
+    "        \n",
+    "def heapSort(arr,k):\n",
+    "    count=0\n",
+    "    n=len(arr)\n",
+    "    #构建一个大顶堆\n",
+    "    for i in range(n//2+2,-1,-1):\n",
+    "        heapify(arr,n,i)\n",
+    "    #一个一个交换元素\n",
+    "    for i in range(n-1,0,-1):\n",
+    "        if count==k:\n",
+    "            break\n",
+    "        arr[i],arr[0]=arr[0],arr[i]\n",
+    "        heapify(arr,i,0)\n",
+    "        count+=1\n",
+    "arr=[8,3,5,7,2,4,6,1]\n",
+    "k=4\n",
+    "heapSort(arr,k)\n",
+    "print(arr[-k:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 2, 10, 5, 6, 3]\n",
+      "[1, 2, 3, 4]\n"
      ]
     }
    ],
    "source": [
     "# 默认小根堆，对所有值取相反数再push进去就可以实现大根堆\n",
     "import heapq as hp\n",
+    "#    1\n",
+    "#  4   2\n",
+    "#10 5 6 3 \n",
+    "\n",
+    "#    -10\n",
+    "# -5    -6\n",
+    "#-4 -2 -1 -3\n",
     "ls=[]\n",
     "hp.heappush(ls,5)\n",
     "hp.heappush(ls,10)\n",
+    "hp.heappush(ls,6)\n",
     "hp.heappush(ls,1)\n",
+    "hp.heappush(ls,4)\n",
+    "hp.heappush(ls,3)\n",
+    "hp.heappush(ls,2)\n",
     "print(ls)\n",
-    "print(hp.nsmallest(2,ls))\n",
-    "print(hp.nlargest(2,ls))\n",
-    "print(hp.heappop(ls)) #1\n",
-    "print(hp.heappop(ls)) #5\n",
-    "print(hp.heappop(ls)) #10\n",
+    "print(hp.nsmallest(4,ls))\n",
+    "# print(hp.nlargest(2,ls))\n",
+    "# print(hp.heappop(ls))\n",
+    "# print(hp.heappop(ls)) \n",
+    "# print(hp.heappop(ls)) \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "[3, 4, 6, 10, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hp.heappop(ls)) \n",
+    "print(ls)\n",
+    "#       2\n",
+    "#    4      3 \n",
+    "# 10  5  6\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "arr=[8,3,5,7,2,4,6,1]\n",
+    "k = 4\n",
+    "res = hp.nsmallest(4,arr)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#大根堆自定义法：\n",
+    "\n",
     "class Maxheap(object):\n",
     "    def __init__(self, maxsize):\n",
     "        self.maxsize = maxsize #堆的大小\n",
     "        self._elements = [0] * maxsize #初始化堆\n",
     "        self._count = 0  #索引\n",
     " \n",
-    "    def add(self, value):\n",
+    "    def push(self, value):\n",
     "        if self._count >= self.maxsize:\n",
     "            raise Exception('full')\n",
     "        self._elements[self._count] = value #放到末尾\n",
     "        self._count += 1 #索引加一，这是当前的下一个索引\n",
     "        self._siftup(self._count - 1) #siftup将当前索引值维护到堆的位置\n",
     " \n",
-    "    def extract(self):\n",
+    "    def pop(self):\n",
     "        if self._count <= 0:\n",
     "            raise Exception('empty')\n",
-    "        value = self._elements[0] #记录堆顶值\n",
+    "        value = self._elements.pop(0) #记录堆顶值\n",
     "        self._count-=1 \n",
-    "        self._elements[0] = self._elements[self._count] #末尾移到堆顶\n",
+    "        # self._elements[0] = self._elements[self._count] #末尾移到堆顶\n",
     "        self._siftdown(0)  #从上到下维护堆\n",
     "        return value\n",
     " \n",
@@ -108,31 +205,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 1, 0, 3, 0, 1, 4, 0]\n"
+      "[9, 8, 6, 7, 2, 5, 4, 0, 3, 1]\n",
+      "[8, 6, 7, 2, 5, 4, 0, 3, 1]\n",
+      "[7, 6, 2, 5, 4, 0, 3, 1]\n",
+      "[6, 2, 5, 4, 0, 3, 1]\n",
+      "[5, 3, 4, 0, 2, 1]\n",
+      "[4, 3, 0, 2, 1]\n",
+      "[3, 0, 2, 1]\n",
+      "[2, 0, 1]\n",
+      "[1, 0]\n",
+      "[0]\n",
+      "[]\n",
+      "[9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
      ]
     }
    ],
    "source": [
-    "#测试代码\n",
+    "#测试自定义大根堆代码\n",
     "import random\n",
     "seq = list(range(10))\n",
     "random.shuffle(seq)\n",
     "heap = Maxheap(len(seq))\n",
     "for i in seq:\n",
-    "    heap.add(i)\n",
-    " \n",
+    "    heap.push(i)\n",
+    "print(heap._elements)\n",
+    "\n",
     "res = []\n",
     "for i in range(10):\n",
-    "    res.append(heap.extract())\n",
+    "    res.append(heap.pop())\n",
+    "    print(heap._elements)\n",
     "    \n",
-    "print(heap._elements)"
+    "# print(heap._elements)\n",
+    "print(res)"
    ]
   }
  ],
