--- a/linear_structure/Deque/3. 无重复字符的最长子串.ipynb
+++ b/linear_structure/Deque/3. 无重复字符的最长子串.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,11 +143,46 @@
     "\n",
     "[727. 最小窗口子序列](https://leetcode-cn.com/problems/minimum-window-subsequence/)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#周子翔code\n",
+    "from collections import deque\n",
+    "class Solution:\n",
+    "    def lengthOfLongestSubstring(self, s):\n",
+    "        deq = deque()\n",
+    "        maxlen = 0\n",
+    "\n",
+    "        for c in s:\n",
+    "            if c not in deq:\n",
+    "                deq.append(c)\n",
+    "                maxlen = max(len(deq),maxlen)\n",
+    "            else:\n",
+    "                deq.append(c)\n",
+    "                t=deq.index(c)\n",
+    "                for i in range(t+1):\n",
+    "                    deq.popleft()\n",
+    "        return maxlen\n",
+    "\n",
+    "print(Solution().lengthOfLongestSubstring('abcdabdcdfet'))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.8.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -161,12 +196,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a4dded33d7e5587329f3b5bd298582320440e731ec97d683ac8324bdf803f54d"
+    "hash": "ca091608d44dc08bfc212ab9efe45736a1dc0fc5d2c0d0a9cccce5866f8fffa4"
    }
   }
  },
