--- a/random/pi.ipynb
+++ b/random/pi.ipynb
@@ -48,9 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "圆周率值是: 3.139012\n",
+      "运行时间是: 0.47562s\n"
+     ]
+    }
+   ],
    "source": [
     "#CalPiV2.py\n",
     "from random import random\n",
@@ -66,6 +75,41 @@
     "pi = 4 * (hits/DARTS)\n",
     "print(\"圆周率值是: {}\".format(pi))\n",
     "print(\"运行时间是: {:.5f}s\".format(perf_counter() - start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pi = 3.14119\n",
+      "运行时间是: 4.34483s\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import random\n",
+    "m = 1000*1000*10\n",
+    "n = 0\n",
+    "start = perf_counter()\n",
+    "for i in range(m):\n",
+    "\t# x、y为0-1之间的随机数\n",
+    "    x = random.random()\n",
+    "    y = random.random()\n",
+    "    # 若点(x,y) 属于图中1/4圆内 则有效个数+1\n",
+    "    if math.sqrt(x**2 + y**2) < 1:\n",
+    "        n += 1\n",
+    "# 计算pi\n",
+    "pi = 4 * n / m\n",
+    "print(\"pi = {}\".format(pi))\n",
+    "print(\"运行时间是: {:.5f}s\".format(perf_counter() - start))\n",
+    "\n",
+    "# pi = 3.1508（结果具有随机性 不一定完全一样）\n"
    ]
   }
  ],
