--- a/hashtable/49.ipynb
+++ b/hashtable/49.ipynb
@@ -26,16 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{('a', 'e', 't'): ['ate', 'eat', 'tea'], ('a', 'b', 't'): ['bat'], ('a', 'n', 't'): ['nat', 'tan']}\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "dict_values([['ate', 'eat', 'tea'], ['bat'], ['nat', 'tan']])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,6 +59,7 @@
     "        for w in sorted(strs):\n",
     "            key = tuple(sorted(w))\n",
     "            d[key] = d.get(key, []) + [w]\n",
+    "        print(d)\n",
     "        return d.values()\n",
     "\n",
     "\"\"\"\n",
