--- a/random/Leetcode1227.ipynb
+++ b/random/Leetcode1227.ipynb
@@ -39,11 +39,17 @@
     "所以此题公式为：\n",
     "\n",
     "f(1)=1\n",
+    "\n",
     "f(2)=0.5\n",
-    "f(3)=1/3 + 1/3 * 1/2 = 0.5\n",
+    "\n",
+    "f(3)=1/3 + 1/3 * 1/2  = 0.5\n",
+    "\n",
     "f(4)=1/4 + 1/4*(1/3+ 1/3 * 1/2  ) + 1/4* 1/2 = 1/4 + 1/4 * f(3) + 1/4* f(2)=0.5\n",
+    "\n",
     "f(5)=1/5 + 1/5 * f(4) + 1/5 * f(3) + 1/5 * f(2)=0.5\n",
+    "\n",
     "...\n",
+    "\n",
     "f(n)=1/n + 1/n * f(n-1) + 1/5 * f(n-2) + ... + 1/n * f(2) =0.5\n",
     " "
    ]
@@ -202,6 +208,31 @@
     "\n",
     "ans = [simulate(i) for i in range(2,10000) ] *1000\n",
     "sum(ans )/len(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 罗毅扬 best\n",
+    "import random\n",
+    "n = 100#人数\n",
+    "k = 100000#次数\n",
+    "sum = 0#统计次数\n",
+    "for i in range(k):\n",
+    "    x = 1#表明第一个乘客开始\n",
+    "    while True:\n",
+    "        x = random.randint(x+1,n+1)\n",
+    "        if x == n+1:\n",
+    "            sum+=1\n",
+    "            break\n",
+    "        elif x == n:\n",
+    "            break\n",
+    "        else:\n",
+    "            None\n",
+    "print(sum/k)#输出结果"
    ]
   }
  ],
